@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 0.23
+    - added shroom to Presets
 
 0.22
     - removed deprecated methods
